# thesis

./: .gitignore  references.bib  thesis.aux  thesis.bbl  thesis.bbl-SAVE-ERROR  thesis.bcf  thesis.fdb_latexmk  thesis.fls  thesis.run.xml  thesis.tex  thesis.toc
code/: .pre-commit-config.yaml  README.md  pyproject.toml
code/examples/: sipm_convex.ipynb  sipm_strongly_convex.ipynb
code/examples/optimal_control/inventory/: sipm_inventory_control.py
code/src/sipm/: __init__.py  sipm.py
code/tests/: test_sipm.py
minimal-thesis/: .gitignore  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
minimal-thesis/layout/: TableOfContentsAndListOfFigures.aux  ThesisTitlepage.aux  thesisBibliography.aux  thesisBibliography.tex  thesisDocumentclass.cls  thesisErklärung.aux  thesisErklärung.tex
minimal-thesis/sec/: abstract.aux  chapter1.aux  chapter1.tex  chapter2.aux  chapter2.tex  chapter3.aux  chapter3.tex  chapter4.aux  chapter5.aux
old-thesis/: thesis.fdb_latexmk
thesis/: .gitignore  main.tex  references.bib  thesis.aux  thesis.bbl  thesis.bcf  thesis.fdb_latexmk  thesis.fls
thesis/layout/: TableOfContentsAndListOfFigures.tex  thesisDocumentclass.cls  thesisErklärung.tex  thesisTitlepage.tex
thesis/sec/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex
